--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,6 +19,7 @@ bind -r -T prefix  [  resize-pane -L
 bind -r -T prefix  \}  resize-pane -R 10
 bind -r -T prefix  \{  resize-pane -L 10
 
+# set -g status-right '#(base64 "#{pane_current_path}")'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -26,10 +27,13 @@ set -g @plugin 'catppuccin/tmux'
 
 set -g @catppuccin_flavour 'latte' # 'latte' frappe, macchiato, mocha
 
+
+
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
 set -g @catppuccin_window_number_position "right"
+
 
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text "#W"
@@ -37,14 +41,26 @@ set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
 
-set -g @catppuccin_status_modules_right "directory user session datetime"
+set -g @catppuccin_status_modules_right "session date_time"
+set -g @catppuccin_status_modules_left "user directory"
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_middle_separator "  █"
 
+set -g @catppuccin_directory_text '#{pane_current_path}'
+set -g @catppuccin_user_text '#{USER}'
+
+set -g @catppuccin_pane_active_border_style "fg=#{thm_black}"
+set -g @catppuccin_pane_background_color "#{thm_black}"
+set -g @catppuccin_pane_border_style "fg=#{thm_white}"
+
+set -g visual-bell on
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
