Refactor nvim configuration

--- a/tmux/Makefile
+++ b/tmux/Makefile
@@ -1,5 +1,5 @@
 install:
-	cp ./tmux.conf ~/.tmux.conf
+	ln -s ${PWD}/tmux.conf ~/.tmux.conf
 
 install-plugins:
 	git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
