--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,7 +9,9 @@ bind -T prefix C-r source-file ~/.tmux.conf
 
 
 bind -T prefix Right select-pane -R
-bind -T prefix Left select-pane -R
+bind -T prefix Left select-pane -L
+bind -T prefix Down select-pane -D
+bind -T prefix Up select-pane -U
 
 unbind [
 unbind ]
@@ -25,7 +27,7 @@ bind -r -T prefix  \{  resize-pane -L 10
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 
-set -g @catppuccin_flavour 'latte' # 'latte' frappe, macchiato, mocha
+set -g @catppuccin_flavor 'latte' # 'latte' frappe, macchiato, mocha
 
 
 
@@ -61,6 +63,7 @@ set -g @catppuccin_pane_background_color "#{thm_black}"
 set -g @catppuccin_pane_border_style "fg=#{thm_white}"
 
 set -g visual-bell on
+set-option -g mouse on
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
